<resources>

    <string name="hint_distrito">Seleccione su distrito:</string>
    <string name="hint_juzgado">Seleccione su juzgado:</string>
    <string name="hint_expediente">Ingrese su numero de expediente:</string>
    <string name="hint_folio">Ingrese su numero de folio:</string>
    <string name="ingrese">Ingrese aqui:</string>
    <string name="consulta">Consultar</string>
    <string name="nueva">Nueva consulta</string>
    <string name="salir">Salir</string>
    <string name="opc_busqueda">Seleccione La Opción De Busqueda:</string>
    <string name="hint_causa">Ingrese su número de Causa:</string>
    <string name="regresar">Regresar</string>

    <string name="app_name">APP-PJHIDALGO</string>
    <string name="title_activity_menu2">APP-PJHIDALGO.</string>

    <string name="banner">bannerp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Informacion</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_des"><u>Notificaciones por lista</u></string>

    <string name="descripcion1">Primera Instancia.&lt;br&gt;Materias Civil y Familiar para los Distritos Judiciales de Pachuca, Tula y Tulancingo.</string>
    <string name="descripcion2">Primera Instancia.&lt;br&gt; Todas las materias para todos los Distritos Judiciales.</string>
    <string name="descripcion3">Segunda Instancia.&lt;br&gt; Materias Civil y Familiar.</string>
    <string name="descripcion">A partir del día 5 de mayo de 2015 los juzgados Quinto y Sexto de lo Civil del Distrito Judicial de Pachuca de Soto se especializarán en asuntos del ramo mercantil, por lo que cambiarán su denominación por la de juzgados Primero y Segundo de lo Mercantil del Distrito Judicial de Pachuca de Soto; sin embargo, continuarán conociendo de todos los juicios y procedimientos de la materia civil que radiquen hasta el día 30 de abril de 2015.</string>
    <string name="nota">Nota importante:&lt;br&gt; &lt;br&gt;- Si usted desea ubicar un exhorto solo escriba la letra E seguida del Número/año del expediente.&lt;br&gt;
        &lt;br&gt;Ejemplo: &lt;br&gt;E00010/2010. &lt;br&gt; E000189/2009.&lt;br&gt;
        &lt;br&gt;- Si el expediente a ubicar es una tercería  escriba la letra T seguida de la letra correspondiente / año del expediente.
        &lt;br&gt;&lt;br&gt;Ejemplo:&lt;br&gt; TA0001/2009.&lt;br&gt;TC0101/2010&lt;br&gt;TC1000/2003.
&lt;br&gt;&lt;br&gt;*No deberá dejar espacios y podrá utilizar mayúsculas y minúsculas*

</string>

    ////////////////////// Activity_menu  /////////////////////////////
    <string name="pie_de_imagen">Servicios de Consulta Electrónica.</string>
    <string name="info">"Ante algún inconveniente con el funcionamiento de esta app, agradeceremos su reporte al 01-771-71-79000 Ext. 9066, 9510 o al correo electrónico desarrollo.sistemas@pjhidalgo.gob.mx </string>

    //////////////////////// Principal ///////////////////////////////77777
    <string name="continuar">Continuar</string>

//////////////////////////// Audiencias Orales ////////////////////////////////////////////////////////
    <string name="titulo_AO">Audiencias orales en materia mercantil.</string>
    <string name="año">Año:</string>
    <string name="mes">Mes:</string>

///////////////////////////// Consejo Familiar ////////////////////////////////////////////////////////////////
    <string name="titulo_CF">Agenda de intervenciones por expediente.</string>
////////////////////////////// Consignaciones /////////////////////////////////////////////////////////////////
    <string name="titulo_Consignaciones">Consulta de Depósitos.</string>

///////////////////////////////// Extintos///////////////////////////////////////////////////////////
    <string name="titulo_EXT">Ubicación de expedientes y/o causas radicadas en juzgados extintos.</string>
    <string name="juz_procedencia">Juzgado de procedencia:</string>
    <string name="materia_perteneciente">Materia a la cual pertenece:</string>
    <string name="causa_ante">Número de causa anterior:</string>

//////////////////////////////////// Notificaciones /////////////////////////////////////////////////////////////
    <string name="titulo_noti">Consulta De Notificaciones Por Lista.</string>
    <string name="fecha_noti">Fecha De Notificación:</string>

    ///////////////////////////// Portafolio ////////////////////////////////////////////////////////////////////777
    <string name="titulo_portafolio">Mi portafolio móvil.</string>
    <string name="agregar_exp">Agregar expediente</string>
    <string name="portafolio">Portafolio de asuntos</string>
    <string name="actualizar">Actualizar expedientes</string>
    <string name="eliminar">Eliminar del portafolio y salir</string>

    ///////////////////////////////Primera Instancia ///////////////////////////////////////////////////////////
    <string name="ubi_exp">Ubicación de expedientes</string>
    <string name="consignaciones">Consignaciones a expedientes</string>
    <string name="audiencias">Agenda de audiencias orales en materia mercantil</string>
    <string name="promociones">Consulta de promociones acordadas</string>
    <string name="intervenciones">Intervenciones del consejo de familia</string>
    <string name="extintos">Ubicar expediente o causa de juzgados extintos </string>

    /////////////////////////////////// Acuerdo Promocion ///////////////////////////////////////////////////////7
    <string name="titulo_acuerdo">Acuerdo de Promoción.</string>
    <string name="tipo_promo">Seleccione el tipo de promoción:</string>

    /////////////////////////////////// Publicacion de tocas //////////////////////////////////////////////////////
    <string name="titulo_pub">Publicaciónes De Tocas</string>
    <string name="sala_proce">Sala De Procedencia:</string>
    <string name="num_toca">Número de toca:</string>

    //////////////////////////////// Ubicacion de Tocas. ///////////////////////////////////////////////////////
    <string name="titulo_ubi">Ubicación de Tocas</string>

    /////////////////////////////////// Ubicacion de expedientes ////////////////////////////////////////////////
    <string name="titulo_UBI_EXP">Ubicación de expedientes.</string>
    <string name="guardar">Guardar En Portafolio Y Salir</string>

    //////////////////////////////////// Menu Drawer /////////////////////////////////////////////////////////
    <string name="opc1">Primera instancia materia civil y familiar"</string>
    <string name="opc2">Pachuca, Tula y Tulancingo</string>
    <string name="opc3">Primera instancia todas las materias</string>
    <string name="opc4">Todos los distritos</string>
    <string name="opc5">Segunda instancia</string>
    <string name="opc6">Materias civil y familiar</string>
    <string name="opc7">Mi portafolio</string>
    <string name="opc8">Mis asuntos</string>
    <string name="opc9">Salir</string>
    <string name="opc10">Cerrar app</string>
//////////////////////////////////////////////////////////////////////////////////////////////////////////////////
</resources>
