<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="20dp"
    tools:context="com.curso.tinodeoz.portal_prueba.principal"
    android:background="@drawable/fond">

    <ImageView
        android:id="@+id/banner"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:background="@drawable/bannerp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/banner2"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginTop="18dp"
        android:text="@string/titulo_UBI_EXP"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:fontFamily="serif"
        android:textStyle="italic"

        android:layout_below="@+id/banner"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_below="@+id/banner2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="15dp"
            android:background="#77ffffff"
            android:orientation="vertical">



            <TextView
                android:id="@+id/txt_distrito"
                android:layout_width="fill_parent"
                android:layout_height="33dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/hint_distrito"
                android:textColor="?android:attr/colorBackground"
                android:textSize="17sp"/>

            <Spinner
                android:id="@+id/spinner_distrito"
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/txt_juzgado"
                android:layout_width="fill_parent"
                android:layout_height="33dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/hint_juzgado"
                android:textColor="?android:attr/colorBackground"
                android:textSize="17sp"
                android:layout_marginTop="10dp"/>

            <Spinner
                android:id="@+id/spinner_juzgado"
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:background="@android:color/darker_gray"
                />

            <Spinner
                android:id="@+id/spinner_juzgado2"
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:background="@android:color/darker_gray"

                />

            <Spinner
                android:id="@+id/spinner_juzgado3"
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:background="@android:color/darker_gray"

                />

            <TextView
                android:id="@+id/txt_expediente"
                android:layout_width="fill_parent"
                android:layout_height="33dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/hint_expediente"
                android:textColor="?android:attr/colorBackground"
                android:textSize="17sp"/>

            <WebView
                android:id="@+id/WebView_nota"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"

                />

            <EditText
                android:id="@+id/txt_no_expediente"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:maxLength="11"
                android:background="@android:color/darker_gray"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/ingrese"
                android:inputType="text" />


            <Button

                android:id="@+id/consultar"
                android:layout_width="105dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/fondo_btn"
                android:text="@string/consulta"
                android:textSize="12sp"
                android:layout_gravity="center_horizontal"
                />

            <HorizontalScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                >

            <TableLayout
                android:id="@+id/Tabla_btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center_horizontal"
                >
            </TableLayout>
            </HorizontalScrollView>


            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/linear_guardar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"

                    >
                    <Button
                        android:id="@+id/guardar"
                        android:layout_width="200dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/fondo_btn"
                        android:text="@string/guardar"
                        android:textSize="12sp"
                        android:layout_gravity="center_horizontal"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_below="@id/linear_guardar"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:layout_centerHorizontal="true">

                    <LinearLayout
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginBottom="70dp"

                        >
                        <Button
                            android:id="@+id/nueva_consulta"
                            android:layout_width="100dp"
                            android:layout_height="60dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/fondo_btn"
                            android:text="@string/nueva"
                            android:textSize="12sp"
                            android:layout_gravity="center_horizontal"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >
                        <Button
                            android:id="@+id/Salir"
                            android:layout_width="100dp"
                            android:layout_height="60dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="0dp"
                            android:background="@drawable/fondo_btn"
                            android:text="@string/salir"
                            android:textSize="12sp"
                            android:layout_gravity="center_horizontal"
                            />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
