<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.curso.tinodeoz.portal_prueba.principal"
    android:background="@drawable/fond">

    <ImageView
        android:id="@+id/banner"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:background="@drawable/bannerp"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/banner2"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:background="@drawable/maso"
        android:layout_below="@id/banner"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        tools:ignore="ContentDescription" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/banner2"
        android:background="@android:color/transparent"
        android:layout_above="@+id/linearLayout">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/marco"
            android:orientation="vertical">

            <WebView
                android:id="@+id/Web_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                />

            <WebView
                android:id="@+id/WebView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_below="@id/Web_title"
            />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/WebView1"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true">

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    >

                    <Button
                        android:id="@+id/btn_ubi_exp"
                        android:layout_width="120dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/fondo_btn"
                        android:text="@string/ubi_exp"
                        android:textSize="14sp"

                        />

                    <Button
                        android:id="@+id/btn_consigna"
                        android:layout_width="120dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/fondo_btn"
                        android:text="@string/consignaciones"
                        android:textSize="12sp"
                        android:layout_gravity="center"
                        />

                    <Button
                        android:id="@+id/btn_audiencias"
                        android:layout_width="120dp"
                        android:layout_height="110dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/fondo_btn"
                        android:text="@string/audiencias"
                        android:textSize="13sp"
                        android:layout_gravity="center"
                        />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                   >

                    <Button
                        android:id="@+id/btn_promo"
                        android:layout_width="120dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/fondo_btn"
                        android:text="@string/promociones"
                        android:textSize="14sp"

                        />

                    <Button
                        android:id="@+id/btn_familiar"
                        android:layout_width="120dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/fondo_btn"
                        android:text="@string/intervenciones"
                        android:textSize="13sp"
                        android:layout_gravity="center"
                        />

                    <Button
                        android:id="@+id/btn_extintos"
                        android:layout_width="120dp"
                        android:layout_height="110dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/fondo_btn"
                        android:text="@string/extintos"
                        android:textSize="13sp"
                        android:layout_gravity="center"
                        />

                </LinearLayout>




            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <ImageView
            android:id="@+id/pie"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@drawable/info"
            tools:ignore="ContentDescription" />
    </LinearLayout>
</RelativeLayout>
